observability/base/vector-cloudwatch/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vector-cloudwatch
spec:
  parentRefs:
    - name: platform-public
      namespace: infrastructure
  hostnames:
    - "vector-cloudwatch-${cluster_name}.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vector-cloudwatch
          port: 8080
